# conda-repodata

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: disclaimer.txt
conda_repodata/: __init__.py  __version__.py  repodata.py
example_transformations/: drop_openssl.py  hotfix.py  noarch.py  only_python.py  only_zlib.py
recipe/: conda_build_config.yaml  meta.yaml
sample_transformations/: hotfix.py  only_python.py  only_zlib.py
